# basketball_reference_web_scraper

./: .coveragerc  .gitignore  .travis.yml  404.html  LICENSE  README.md  build.sh  client.py  csv_writers.py  data.py  errors.py  http_client.py  index.html  json_encoders.py  logging.json  mkdocs.yml  myPricePicksMethods.py  output.py  prizePicks.ipynb  pyproject.toml  pyvenv.cfg  readers.py  requirements.txt  setup.py  setup_logging.py  sitemap.xml  test_additions.py  test_get_schedule.py  test_players_season_advanced.py  test_season_schedule.py  web_scrapers.py
.github/workflows/: ci.yml  workflows.yaml
api/: index.html
basketball_reference_web_scraper/: client.py  data.py  errors.py  four_factors.py  html.py  http_client.py  http_service.py  json_encoders.py  output.py  parser.py  parser_service.py  parsers.py  utilities.py  writers.py
basketball_reference_web_scraper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
basketball_reference_web_scraper/contracts/: data.py  readers.py
basketball_reference_web_scraper/output/: columns.py  fields.py  service.py  writers.py
basketball_reference_web_scraper/parsers/: box_scores.py  games.py  play_by_play.py  player_number.py  player_season_totals.py  players_advanced_season_totals.py  players_season_advanced.py  players_season_totals.py  positions.py  schedule.py
basketball_reference_web_scraper/tests/: test_season_schedule.py
development/: index.html
docs/: api.md  development.md  index.md
helper_functions/box_score/: box_score_url_generator.py  box_scores_html_returner.py  parsed_box_scores_returner.py
helper_functions/player_season_statistics/: parsed_player_season_statistics_returner.py  player_season_statistics_html_returner.py  player_season_statistics_url_generator.py  total_season_statistics_url_generator.py
helper_functions/schedule/: parsed_event_list_returner.py  parsed_events_in_range_returner.py  parsed_raw_event_start_time_in_utc_returner.py  raw_events_returner.py  schedule_url_generator.py  season_schedule_url_generator.py
json_encoders/: box_score.py  event.py  player_season_statistics.py  schedule.py
models/: box_score.py  player_season_statistics.py
output/: box_scores.py
parsers/: box_scores.py  schedule.py
scripts/: Publish Documentation to GitHub Pages.sh  build.sh
search/: search_index.json
static/box_scores/: 2014_10_28.csv  2014_11_05.csv  2014_11_06.csv  2014_11_07.csv  2014_11_09.csv  2014_11_11.csv  2014_11_12.csv  2014_11_13.csv  2014_11_14.csv  2014_11_17.csv  2014_11_18.csv  2014_11_19.csv  2014_11_20.csv  2014_11_21.csv  2014_11_24.csv  2014_11_26.csv  2014_11_29.csv  2014_11_30.csv  2014_12_02.csv  2014_12_03.csv  2014_12_04.csv  2014_12_08.csv  2014_12_10.csv  2014_12_12.csv  2014_12_15.csv  2014_12_16.csv  2014_12_17.csv  2014_12_20.csv  2014_12_21.csv  2014_12_22.csv  2014_12_26.csv  2014_12_29.csv  2014_12_30.csv  2014_12_31.csv  2015_01_01.csv  2015_01_02.csv  2015_01_03.csv  2015_01_05.csv  2015_01_06.csv  2015_01_09.csv  (+56 more)
static/schedules/: 2000_2001.csv  2002_2003.csv  2003_2004.csv  2004_2005.csv  2006_2007.csv  2007_2008.csv  2008_2009.csv  2010_2011.csv  2012_2013.csv
tests/: 01_01_2017_box_scores.html  01_29_2017_daily_leaders.html  11_01_2006_daily_leaders.html  11_03_2003_daily_leaders.html  12_12_2017_daily_leaders.html  12_18_2015_daily_leaders.html  201701010ATL.html  2018_01_01_team_box_scores.json  NBA_2018_games-october.html  NBA_2019_advanced_totals.html  NBA_2019_totals.html  foo.csv  foo.json  kemba_get_player_link_test.html  new_tests.py  player_advanced_season_totals_2001.csv  player_advanced_season_totals_2019.csv  player_season_totals_2001.csv  player_season_totals_2018.csv  test_box_scores.py  test_csv_writer.py  test_daily_box_scores_page.py  test_event.py  test_get_box_scores.py  test_get_season_schedule.py  test_html.py  test_http_client.py  test_integration_client.py  test_integration_league_abbreviation_parser.py  test_integration_parse_games.py  test_integration_parse_player_advanced_season_totals.py  test_integration_parse_player_box_scores.py  test_integration_parse_player_season_totals.py  test_integration_parse_schedule.py  test_integration_parse_teams.py  test_integration_player_box_score_outcome_parser.py  test_integration_player_data_parser.py  test_integration_player_regular_season_box_scores.py  test_integration_player_regulars_season_box_scores.py  test_integration_player_season_totals.py  (+38 more)
tests/end to end/: test_client.py
(+350 files in other folders)
