[tool.poetry]
name = "basketball_reference_web_scraper"
version = "4.12.1"
description = "A Basketball Reference client that generates data by scraping the website"
authors = ["Jae Bradley <jae.b.bradley@gmail.com>"]
maintainers = ["Jae Bradley <jae.b.bradley@gmail.com>"]
license = "MIT"
keywords = ["NBA", "Basketball", "Basketball", "Reference", "basketball-reference.com"]
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent"]
repository = "https://github.com/jaebradley/basketball_reference_web_scraper"
homepage = "https://jaebradley.github.io/basketball_reference_web_scraper"
readme = "README.md"
exclude = ["tests", "docs"]

[tool.poetry.dependencies]
python = "^3.7"
certifi = "==2023.7.22"
chardet = "==3.0.4"
idna = "==2.7"
lxml = "==4.5.1"
pytz = "==2018.6"
requests = "==2.20.0"
urllib3 = "==1.24.3"

[tool.poetry.dev-dependencies]
codecov = "^2.1.13"
mkdocs = "^1.1.2"
mkdocs-material = "^5.3.3"
pymdown-extensions = "^7.1"
coverage = "^5.1"
pytest = "^7.4.2"

[tool.poetry.urls]
issues = "https://github.com/jaebradley/basketball_reference_web_scraper/issues"
pull_requests = "https://github.com/jaebradley/basketball_reference_web_scraper/pull_requests"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
pythonpath = "basketball_reference_web_scraper"
addopts = [
    "--import-mode=importlib",
]
