[tool.poetry]
name = "basketball_reference_web_scraper"
version = "4.14.0"
description = "A Basketball Reference client that generates data by scraping the website"
authors = ["Jae Bradley <jae.b.bradley@gmail.com>"]
maintainers = ["Jae Bradley <jae.b.bradley@gmail.com>"]
license = "MIT"
keywords = ["NBA", "Basketball", "Basketball", "Reference", "basketball-reference.com"]
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent"]
repository = "https://github.com/jaebradley/basketball_reference_web_scraper"
homepage = "https://jaebradley.github.io/basketball_reference_web_scraper"
readme = "README.md"
exclude = ["tests", "docs"]

[tool.poetry.dependencies]
python = "^3.7"
lxml = "^5.1.0"
pytz = "^2024.1"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
codecov = "^2.1.13"
mkdocs = "^1.5.3"
mkdocs-material = "<= 9.2.8"
pymdown-extensions = "<= 10.2.1"
coverage = "<= 7.2.7"
pytest = "<= 7.4.4"

[tool.poetry.urls]
issues = "https://github.com/jaebradley/basketball_reference_web_scraper/issues"
pull_requests = "https://github.com/jaebradley/basketball_reference_web_scraper/pull_requests"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "basketball_reference_web_scraper"
addopts = [
    "--import-mode=importlib",
]
